--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "cors": "^2.8.5",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-render-ctrl": "^1.1.1",
+    "react-responsive-carousel": "^3.1.51",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1"
   },
